--- a/view/footer.mustache
+++ b/view/footer.mustache
@@ -8,5 +8,6 @@
     <i class="fa fa-linkedin w3-hover-opacity"></i>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<script src="../public/js/validation_form.js"></script>
 </body>
 </html>
