--- a/view/header.mustache
+++ b/view/header.mustache
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+<link rel="stylesheet" href="/Pregunta2/public/styles/style.css">
 
 <body>
 
@@ -18,6 +19,7 @@
         <a href="/Pregunta2/song/listar" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Canciones</a>
         <a href="/Pregunta2/tour/listar" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Presentaciones</a>
         <a href="/Pregunta2/group/request" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Sumarme</a>
+        <a href="/Pregunta2/register/show" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Registrarse</a>
         <a href="/Pregunta2/login/show" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Login</a>
     </div>
 </div>
