--- a/view/registerView.mustache
+++ b/view/registerView.mustache
@@ -49,7 +49,7 @@
         </div>
 
         <div class="col-12 text-end mt-3">
-            <button type="submit" class="btn btn-sm btn-primary px-4">Registrarseeeeeeeeeeeee</button>
+            <button type="submit" class="btn btn-sm btn-primary px-4">Registrarse</button>
         </div>
 
     </form>
