vista perfil ya muestra los datos del usuerio, falta arreglar el tema de la img

--- a/view/header.mustache
+++ b/view/header.mustache
@@ -24,6 +24,7 @@
             <div class="w3-bar-item w3-padding-large text-white">
                 Hola, {{username}}!
             </div>
+            <a href="/Pregunta2/profile/show" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">perfil</a>
             <a href="/Pregunta2/login/logout" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Salir</a>
         {{/username}}
 
