--- a/view/profileView.mustache
+++ b/view/profileView.mustache
@@ -7,13 +7,12 @@
 
         <!-- Parte inferior: Información -->
         <div class="card-body">
-            <h5 class="card-title">Nombre de Usuario: Juan Pérez</h5>
-            <p class="card-text text-muted mb-1">juan.perez@example.com</p>
-            <p class="card-text">Nombre Completo:</p>
-            <p class="card-text">Fecha de Nacimiento:</p>
-            <p class="card-text">Sexo:</p>
-            <p class="card-text">Pais:</p>
-
+            <h5 class="card-title">Nombre de Usuario: {{nombre_usuario}}</h5>
+            <p class="card-text text-muted mb-1">Email: {{email}}</p>
+            <p class="card-text text-muted mb-1">Nombre Completo:{{nombre}}</p>
+            <p class="card-text text-muted mb-1">Fecha de Nacimiento:{{fecha_nacimiento}}</p>
+            <p class="card-text text-muted mb-1">Sexo:{{sexo}}</p>
+            <p class="card-text text-muted mb-1">Pais:{{tipo_residencia}}</p>
             <!--<a href="#" class="btn btn-primary">Editar perfil</a>-->
         </div>
     </div>
