--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -2,7 +2,7 @@
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <!-- Contenido central -->
     <div class="central-card ">
-        <img src="../public/imgs/signos.png" alt="Trivia" class="quiz-image ">
+        <img src="./public/imgs/signos.png" alt="Trivia" class="quiz-image ">
         <h2 class="w3-xxlarge w3-margin-top">¿Cuántas preguntas<br>podés responder?</h2>
         <a href="/jugar" class="w3-button w3-black w3-large w3-margin-top">Comenzar</a>
     </div>
