--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -1,1 +1,8 @@
-<h1>boenas</h1>
+<main>
+    <div class="contenedor-partida">
+            <div class="smiley-face">😊</div>
+            <h1>¡Hola!</h1>
+            <p>¿Listo para jugar?</p>
+            <a href="index.php?controller=partida&method=show" class="boton">Comenzar partida</a>
+    </div>
+</main>
