solucione la parte de img en perfil , falta mejorar el html

--- a/view/profileView.mustache
+++ b/view/profileView.mustache
@@ -2,7 +2,8 @@
     <div class="card text-center shadow-sm">
         <!-- Parte superior: Imagen -->
         <div class="card-header bg-light">
-            <img src="https://via.placeholder.com/150" class="rounded-circle img-fluid" alt="Foto de perfil" style="width: 150px; margin-top: -75px; border: 5px solid white;">
+            <img src="/pregunta2/public/imgs/{{foto_perfil}}" class="rounded-circle img-fluid" alt="Foto de perfil" style="width: 150px; margin-top: -75px; border: 5px solid white">
+
         </div>
 
         <!-- Parte inferior: Información -->
@@ -12,7 +13,6 @@
             <p class="card-text text-muted mb-1">Nombre Completo:{{nombre}}</p>
             <p class="card-text text-muted mb-1">Fecha de Nacimiento:{{fecha_nacimiento}}</p>
             <p class="card-text text-muted mb-1">Sexo:{{sexo}}</p>
-            <p class="card-text text-muted mb-1">Pais:{{tipo_residencia}}</p>
             <!--<a href="#" class="btn btn-primary">Editar perfil</a>-->
         </div>
     </div>
