--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -1,8 +1,11 @@
 <main>
     <div class="contenedor-partida">
             <div class="smiley-face">😊</div>
-            <h1>¡Hola!</h1>
+            <h1>¡Hola! {{nombre_usuario}} </h1>
+            <p>Tu puntaje en el ranking es :</p>
             <p>¿Listo para jugar?</p>
-            <a href="index.php?controller=partida&method=show" class="boton">Comenzar partida</a>
+            <a href="/Pregunta2/partida/show" class="w3-button w3-black w3-large w3-margin-top">Comenzar partida</a>
+            <a href="/Pregunta2/ranking/show" class="w3-button w3-black w3-large w3-margin-top">Ranking total</a>
+        <a href="/Pregunta2/cuestion/show" class="w3-button w3-black w3-large w3-margin-top">Crear preguntas nuevas</a>
     </div>
 </main>
