agregue vista perfil individua, osea que cada vez que el jugador ingrese al ranking y quiera ver el perfil de x jugador , redirige la vista y muestra los respectivos datos, falta los style

--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -10,7 +10,7 @@
         </tr>
         {{#usuarios}}
             <tr>
-                <td><a href="/Pregunta2/ranking/perfilJugador">{{nombre}}</a></td>
+                <td><a href="/Pregunta2/profileGamer/show?usuario={{nombre}}">{{nombre}}</a></td>
                 <td>{{apellido}}</td>
                 <td> {{email}} </td>
             </tr>
