subiendo los cambios

--- a/view/cuestionNewView.mustache
+++ b/view/cuestionNewView.mustache
@@ -6,6 +6,8 @@
             <input type="text" class="form-control" id="pregunta" name="pregunta" >
         </div>
 
+        <p>flata los inputs con respuestas</p>
+
         <div class="mb-3">
             <label for="categoria" class="form-label">Selecciona la categoría</label>
             <select class="form-select" id="categoria" name="categoria">
