--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -7,5 +7,6 @@
             <a href="/Pregunta2/partida/show" class="w3-button w3-black w3-large w3-margin-top">Comenzar partida</a>
             <a href="/Pregunta2/ranking/show" class="w3-button w3-black w3-large w3-margin-top">Ranking total</a>
         <a href="/Pregunta2/cuestion/show" class="w3-button w3-black w3-large w3-margin-top">Crear preguntas nuevas</a>
+        <p>(suponiendo) desea aceptar la partida? </p>
     </div>
 </main>
