redireccion y una  prueba de como se veria el mostrar ranking

--- a/view/profileGamerView.mustache
+++ b/view/profileGamerView.mustache
@@ -2,8 +2,8 @@
 
 {{#userdata}}
     <p>nombre:{{nombre_usuario}}</p>
-    <p>puntaje final:</p>
-    <p>partidas {{email}}</p>
+    <p>puntaje final:{{puntaje_acumulado}}</p>
+    <p>partidas :{{cantidad_partidas}}</p>
 {{/userdata}}
 
 <button>desafiar a una partida</button>
