Clase Security + Ruleta

--- a/view/loginView.mustache
+++ b/view/loginView.mustache
@@ -8,7 +8,7 @@
             <img src="https://cdn6.aptoide.com/imgs/1/a/3/1a354d9524ca67a64e36f511d210a621_icon.png" alt="Pokebola" width="30">
         </h3>
 
-        <form action="/Pregunta2/login/validateUser" method="post">
+        <form action="/login/validateUser" method="post">
             <div class="mb-3 input-group">
                 <span class="input-group-text"><i class="bi bi-person"></i></span>
                 <input type="text" name="nameuser" class="form-control" placeholder="Usuario" required>
