--- a/view/preguntaView.mustache
+++ b/view/preguntaView.mustache
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-    <form method="POST" action="/Pregunta2/juego/responder" class="">
+    <form method="POST" action="/juego/responder" class="">
         <input type="hidden" name="id_pregunta" value="{{id_pregunta}}">
 
         <h4 class="mb-4 text-center text-primary">{{pregunta}}</h4>
