--- a/view/registerView.mustache
+++ b/view/registerView.mustache
@@ -1,7 +1,7 @@
 <h1 class="text-center my-4" style="font-size: 1.8rem;">Registrarse</h1>
 
 <div class="container d-flex justify-content-center">
-    <form id="registerForm" class="row g-3 w-75" method="post" action="/Pregunta2/register/addUser" enctype="multipart/form-data">
+    <form id="registerForm" class="row g-3 w-75" method="post" action="/register/addUser" enctype="multipart/form-data">
 
         <div class="col-md-6">
             <label class="form-label">Nombre</label>
