--- a/view/resultadoView.mustache
+++ b/view/resultadoView.mustache
@@ -1,3 +1,3 @@
 <h2>Juego terminado</h2>
 <p>Tu puntaje fue: <strong>{{puntaje}}</strong></p>
-<a href="/pregunta2/index/show" class="btn btn-secondary">Volver al inicio</a>
+<a href="/index/show" class="btn btn-secondary">Volver al inicio</a>
