imagenes, perfil funcional y header con sessiones

--- a/view/registerView.mustache
+++ b/view/registerView.mustache
@@ -45,7 +45,7 @@
 
         <div class="col-md-6">
             <label class="form-label">Foto de perfil</label>
-            <input type="text" name="photo" class="form-control form-control-sm" />
+            <input type="file" name="photo" class="form-control form-control-sm" />
         </div>
 
         <div class="col-12 text-end mt-3">
