--- a/view/header.mustache
+++ b/view/header.mustache
@@ -7,34 +7,42 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-<link rel="stylesheet" href="/Pregunta2/public/styles/style.css">
-<link rel="stylesheet" href="/Pregunta2/public/styles/preguntas.css">
+<link rel="stylesheet" href="{{BASE_URL}}/public/styles/style.css">
+<link rel="stylesheet" href="{{BASE_URL}}/public/styles/preguntas.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
+    <a class="navbar-brand text-nav" href="/lobby/show"><img class="img-nav" src="{{BASE_URL}}/public/imgs/logo.png"> </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-<!-- Navbar -->
-<div class="w3-top">
-    <div class="w3-bar w3-black w3-card">
-        <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
-           href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
-            <i class="fa fa-bars"></i>
-        </a>
+    <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
+        <ul class="navbar-nav align-items-center">
 
-        {{#username}}
-            <div class="w3-bar-item w3-padding-large text-white">
-                Hola, {{username}}!
-            </div>
-            <a href="/profile/show" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">perfil</a>
-            <a href="/login/logout" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Salir</a>
-        {{/username}}
+            {{#username}}
+                <li class="nav-item text-white mx-2 ms-5 text-nav fs-5">
+                   Hola, {{username}}!
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-nav ms-5 fs-5" href="/profile/show">Perfil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-nav ms-5 fs-5" href="/login/logout">Salir</a>
+                </li>
+            {{/username}}
 
-        {{^username}}
-            <a href="/register/show" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Registrarse</a>
-            <a href="/login/show" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Login</a>
-        {{/username}}
+            {{^username}}
+
+                <li class="nav-item">
+                    <a class="btn btn-warning me-2" href="/register/show">Registrarse</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-outline-light me-2" href="/login/show">Login</a>
+                </li>
+            {{/username}}
+
+        </ul>
     </div>
-</div>
-
-<!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px">
+</nav>
