--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -1,9 +1,13 @@
 <!-- The Band Section -->
+
+<h1 class="text-center mt-5">Bienvenidos a Pregunta2!</h1>
+
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <!-- Contenido central -->
     <div class="central-card ">
         <img src="{{BASE_URL}}/public/imgs/signos.png" alt="Trivia" class="quiz-image ">
-        <h2 class="w3-xxlarge w3-margin-top">¿Cuántas preguntas<br>podés responder?</h2>
-        <a href="/ruleta/show" class="w3-button w3-black w3-large w3-margin-top">Comenzar</a>
+        <h2 class="text-center mt-2">¿Cuántas preguntas sos capaz de responder?</h2>
+        <p class="text-center fs-5 fst-italic mt-1">Demostrá tu conocimiento. ¡Empezá cuando quieras!</p>
+        <a href="/ruleta/show" class="w3-button w3-black w3-large w3-margin-top mt-5">¡Comenzar!</a>
     </div>
 </div>
