--- a/view/ruletaView.mustache
+++ b/view/ruletaView.mustache
@@ -1,4 +1,6 @@
-<div style="position: relative; width: 500px; height: 500px; margin: auto;">
+<h1>Gira la ruleta pá</h1>
+
+<div class="div-ruleta" style="position: relative; width: 500px; height: 500px; margin: auto;">
     <canvas id="canvas" width="500" height="500"></canvas>
 
     <!-- Marcador superior ▼ (opcional) -->
