agregue las clases para que funciona la vista ranking

--- a/view/header.mustache
+++ b/view/header.mustache
@@ -31,6 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link text-nav ms-5 fs-5" href="/login/logout">Salir</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-nav ms-5 fs-5" href="/ranking/show">Ranking</a>
+                </li>
             {{/username}}
 
             {{^username}}
