agregue las clases para que funcione si apreto a un nombre del ranking me redirija a su perfil de jugador

--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -12,7 +12,7 @@
         <tbody>
         {{#usuarios}}
         <tr>
-            <td><a >{{nombre_usuario}}</a></td>
+            <td><a href="/profileGamer/show/{{nombre_usuario}}">{{nombre_usuario}}</a></td>
             <td>{{tipo_ranking}}</td>
             <td> {{puntaje_acumulado}} </td>
         </tr>
