mejore el query que trae el puntaje y artidas jugadas de cada jugador

--- a/view/profileGamerView.mustache
+++ b/view/profileGamerView.mustache
@@ -2,8 +2,8 @@
 
 {{#jugador}}
     <p>nombre:{{nombre_usuario}}</p>
-    <p>puntaje final:{{puntaje_acumulado}}</p>
-    <p>partidas :{{cantidad_partidas}}</p>
+    <p>puntaje final:{{puntaje_total}}</p>
+    <p>partidas :{{cant_partidas}}</p>
 {{/jugador}}
 
 <button>desafiar a una partida</button>
