mostrar datos del perfil individual

--- a/view/header.mustache
+++ b/view/header.mustache
@@ -25,15 +25,20 @@
                 <li class="nav-item text-white mx-2 ms-5 text-nav fs-5">
                    Hola, {{username}}!
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link text-nav ms-5 fs-5" href="/profile/show">Perfil</a>
+                <a class="nav-link text-nav ms-5 fs-5" href="/ranking/show">Ranking</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-nav ms-5 fs-5" href="/listaPartida/show">Partidas</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link text-nav ms-5 fs-5" href="/profile/show">Perfil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-nav ms-5 fs-5" href="/login/logout">Salir</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-nav ms-5 fs-5" href="/ranking/show">Ranking</a>
-                </li>
+
             {{/username}}
 
             {{^username}}
