--- a/view/header.mustache
+++ b/view/header.mustache
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>W3.CSS Template</title>
+<title>{{titulo}}</title>
+<link rel="stylesheet" href="/public/styles/{{css}}">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -23,17 +24,17 @@
 
             {{#username}}
                 <li class="nav-item text-white mx-2 ms-5 text-nav fs-5">
-                   Hola, {{username}}!
+                    Hola, {{username}}!
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link text-nav ms-5 fs-5" href="/ranking/show">Ranking</a>
+                    <a class="nav-link text-nav ms-5 fs-5" href="/ranking/show">Ranking</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-nav ms-5 fs-5" href="/listaPartida/show">Partidas</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link text-nav ms-5 fs-5" href="/profile/show">Perfil</a>
+                    <a class="nav-link text-nav ms-5 fs-5" href="/profile/show">Perfil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-nav ms-5 fs-5" href="/login/logout">Salir</a>
