--- a/view/listaPartidaView.mustache
+++ b/view/listaPartidaView.mustache
@@ -1,10 +1,9 @@
-<div class="container d-flex justify-content-center align-items-center vh-100 table-responsive">
-
-    <table class="table table-bordered table-striped text-center">
-        <thead class="table-primary">
+<main>
+    <table>
+        <thead>
         <tr>
             <th>Partida</th>
-            <th>Puntaje Total</th>
+            <th>Puntaje conseguido</th>
         </tr>
         </thead>
         <tbody>
@@ -16,4 +15,4 @@
         {{/usuario}}
         </tbody>
     </table>
-</div>
+</main>
