--- a/view/ruletaView.mustache
+++ b/view/ruletaView.mustache
@@ -1,25 +1,8 @@
-<h1>Gira la ruleta pá</h1>
+<main>
 
-<div class="div-ruleta" style="position: relative; width: 500px; height: 500px; margin: auto;">
+<div class="contenedor-ruleta">
     <canvas id="canvas" width="500" height="500"></canvas>
-
-    <!-- Marcador superior ▼ (opcional) -->
-    <div style="position: absolute; top: 10px; left: 50%; transform: translateX(-50%); font-size: 40px; color: red; pointer-events: none;">
-
-    </div>
-
-    <!-- Imagen centrada en el medio de la ruleta -->
-    <img src="{{BASE_URL}}/public/imgs/flecha.png" alt="Flecha" style="
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 80px; /* ajustá el tamaño a gusto */
-        height: 80px;
-        transform: translate(-50%, -50%);
-        pointer-events: none;
-    ">
+    <img src="{{BASE_URL}}/public/imgs/flecha.png" alt="Flecha" class="flecha">
 </div>
 
-
-<!-- End Page Content -->
-</div>
+</main>
