agregue el campo fecha a partidas

--- a/view/listaPartidaView.mustache
+++ b/view/listaPartidaView.mustache
@@ -2,14 +2,14 @@
     <table>
         <thead>
         <tr>
-            <th>Partida</th>
+            <th>Fecha de Partida</th>
             <th>Puntaje conseguido</th>
         </tr>
         </thead>
         <tbody>
         {{#usuario}}
             <tr>
-                <td>{{nro_partida}}</td>
+                <td>{{fecha}}</td>
                 <td> {{puntaje_total}} </td>
             </tr>
         {{/usuario}}
