--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -3,7 +3,7 @@
             <thead>
             <tr>
                 <th>Usuario</th>
-                <th>Puntaje acumulado actual</th>
+                <th>Mejor Puntaje</th>
             </tr>
             </thead>
             <tbody>
