--- a/view/footer.mustache
+++ b/view/footer.mustache
@@ -16,9 +16,9 @@
     </div>
 
     <div class="d-flex gap-5">
-        <p class="p-footer mb-0">Lautaro Rossi</p>
+        <p class="p-footer mb-0">Pilar Rodriguez</p>
         <p class="p-footer mb-0">-</p>
-        <p class="p-footer mb-0">Facundo Guillen</p>
+        <p class="p-footer mb-0">Anahi Quelca</p>
     </div>
 </footer>
 
