--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -1,4 +1,9 @@
 <main>
+    <div class="lobby-container">
+        <a href="/proponer/mostrarFormulario" class="btn btn-primary">Proponer Pregunta</a>
+            Proponer Pregunta
+        </a>
+    </div>
     <div class="contenedor-principal">
         <div class="contenedor-gifs">
             <img src="{{BASE_URL}}/public/imgs/signo.gif" alt="Trivia" class="quiz-image ">
