--- a/view/listaPartidaView.mustache
+++ b/view/listaPartidaView.mustache
@@ -1,4 +1,7 @@
 <main>
+    <section class="contenedor-partidas">
+        <h2>Lista de partidas</h2>
+        <div class="contenedor-tabla-partidas">
     <table>
         <thead>
         <tr>
@@ -15,4 +18,6 @@
         {{/usuario}}
         </tbody>
     </table>
+        </div>
+    </section>
 </main>
