--- a/public/styles/listaPartida.css
+++ b/public/styles/listaPartida.css
@@ -13,48 +13,56 @@ main {
     min-height: 100vh;
 }
 
+.contenedor-partidas{
+    width: 100%;
+    max-width: 800px;
+    padding: 2em;
+    border-radius: 16px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    margin-top: 2em;
+    animation: fadeIn 0.8s ease-in-out;
+}
+
+.contenedor-partidas h2 {
+    text-align: center;
+    margin-bottom: 1em;
+    font-size: 2rem;
+    color: #222;
+    font-weight: 700;
+}
+
+.contenedor-tabla-partidas{
+    overflow-x: auto;
+}
+
 table {
+    width: 100%;
     border-collapse: collapse;
-    width: 90%;
-    max-width: 600px;
     border-radius: 12px;
     overflow: hidden;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
-    animation: fadeIn 0.8s ease-in-out;
-    margin-top: 2em;
-    text-align: center;
 }
 
 thead {
     background-color: #FFB14D;
+    color: #222;
+    font-weight: 600;
 }
 
-td{
-    padding: 0.5em;
+table th, table td {
+    padding: 1em;
+    text-align: center;
 }
 
 tbody tr {
-    border-bottom: 1px solid gray;
-    transition: background-color 0.3s ease;
+    border-bottom: 1px solid #eee;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    cursor: pointer;
 }
-
-
-thead th {
-    padding: 1em;
-    text-align: center;
-    font-weight: bold;
-    font-size: 1.1em;
-}
-
-td:last-child,
-th:last-child {
-    text-align: center;
-}
-
 
 tbody tr:hover {
-    background-color: #d5cccc;
-    cursor: pointer;
+    background-color: #CFCFCF99;
+    transform: scale(1.004);
 }
 
 @keyframes fadeIn {
