--- a/view/header.mustache
+++ b/view/header.mustache
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <title>{{titulo}}</title>
-<link rel="stylesheet" href="/public/styles/{{css}}?v=123456789123897634578">
+<link rel="stylesheet" href="/public/styles/{{css}}">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-<link rel="stylesheet" href="{{BASE_URL}}/public/styles/style.css">
+<link rel="stylesheet" href="{{BASE_URL}}/public/styles/style.css?v1234">
 <link rel="stylesheet" href="{{BASE_URL}}/public/styles/preguntas.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
@@ -35,9 +37,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-nav ms-5 fs-5" href="/profile/show">Perfil</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-nav ms-5 fs-5" href="/login/logout">Salir</a>
                 </li>
 
             {{/username}}
