--- a/view/footer.mustache
+++ b/view/footer.mustache
@@ -30,6 +30,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
 <script src="{{BASE_URL}}/public/js/ruleta.js"></script>
+<script src="{{BASE_URL}}/public/js/eliminar_pregunta.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
