que el usuario pueda proponer una pregunta

--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -1,7 +1,7 @@
 <main>
     <div class="lobby-container">
-        <a href="/proponer/mostrarFormulario" class="btn btn-primary">Proponer Pregunta</a>
-            Proponer Pregunta
+        <a href="/proponer/crearPregunta" class="btn btn-primary">Proponer pregunta</a>
+        Proponer Pregunta
         </a>
     </div>
     <div class="contenedor-principal">
