agregue el qr, que cuando lo escaneas me redirije a vista perfil con sus respectivos datos

--- a/view/profileGamerView.mustache
+++ b/view/profileGamerView.mustache
@@ -20,10 +20,9 @@
         <ul class="list-group list-group-flush mb-3">
             <li class="list-group-item"><strong> Usuario:</strong> {{nombre_usuario}}</li>
             <li class="list-group-item"><strong> Email:</strong> {{email}}</li>
-            <li class="list-group-item"><strong> País:</strong> {{tipo_residencia}}</li>
             <li class="list-group-item"><strong> Puntaje Total:</strong> {{puntaje_total}}</li>
             <li class="list-group-item"><strong> Partidas jugadas :</strong> {{cant_partidas}}</li>
-            <img src="/public/qr/{{nombre_usuario}}.png" alt="qr de este perfil">
+            <img src="/profileGamer/generarQr/{{id_usuario}}" alt="codigo qr" width="300" height="300">
         </ul>
         {{/jugador}}
         <button>desafiar a una partida</button>
