--- a/view/editorView.mustache
+++ b/view/editorView.mustache
@@ -25,8 +25,19 @@
         </select>
     </div>
 
-    <button type="submit" class="btn btn-primary">Filtrar</button>
+    <!-- Botón de filtrado -->
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Filtrar</button>
+    </div>
+
+    <!-- Botones para ver propuestas y reportadas alineados a la derecha -->
+    <div class="form-group ms-auto d-flex gap-2">
+        <a href="/editor/verPropuestas" class="btn btn-dark">Ver preguntas propuestas</a>
+        <a href="/editor/verReportadas" class="btn btn-danger me-3">Ver preguntas reportadas</a>
+    </div>
+
 </form>
+
 
 <h2>Listado de Preguntas</h2>
 
